--- a/.github/workflows/app-with-compose-actions.yml
+++ b/.github/workflows/app-with-compose-actions.yml
@@ -17,9 +17,10 @@ jobs:
         cache: maven
     - name: Make application-prod.properties
       run: |
+        mkdir ./src/main/resources
         cd ./src/main/resources
         touch ./application.properties
-        echo "${{ secrets.PROPERTIES }}" > ./application.properties
+        echo "${{ secrets.PROPERTIES }}" > ./src/main/resources/application.properties
       shell: bash
       
     - name: Build with Maven
