--- a/.github/workflows/app-with-compose-actions.yml
+++ b/.github/workflows/app-with-compose-actions.yml
@@ -17,10 +17,11 @@ jobs:
         cache: maven
     - name: Make application-prod.properties
       run: |
-        mkdir ./src/main/resources
-        cd ./home/ubuntu/src/main/resources
-        touch ./application.properties
-        echo "${{ secrets.PROPERTIES }}" > ./home/ubuntu/src/main/resources/application.properties
+        mkdir -p ./src/main/resources
+        echo "${{ secrets.PROPERTIES }}" > ./src/main/resources/application.properties
+#        cd ./home/ubuntu/src/main/resources
+#        touch ./application.properties
+#        echo "${{ secrets.PROPERTIES }}" > ./home/ubuntu/src/main/resources/application.properties
       shell: bash
       
     - name: Build with Maven
