--- a/.github/workflows/app-with-compose-actions.yml
+++ b/.github/workflows/app-with-compose-actions.yml
@@ -18,10 +18,9 @@ jobs:
     - name: Make application-prod.properties
       run: |
         mkdir -p ./src/main/resources
-        echo "${{ secrets.PROPERTIES }}" > ./src/main/resources/application.properties
-#        cd ./home/ubuntu/src/main/resources
-#        touch ./application.properties
-#        echo "${{ secrets.PROPERTIES }}" > ./home/ubuntu/src/main/resources/application.properties
+        cd ./src/main/resources
+        touch ./application.properties
+        echo "${{ secrets.PROPERTIES }}" > ./application.properties
       shell: bash
       
     - name: Build with Maven
@@ -62,13 +61,15 @@ jobs:
     steps:
     - name: Execute deployment script
       uses: appleboy/ssh-action@v1.2.0
+      env: 
+        COMPOSE_FILE: "/home/ubuntu/docker-compose.yml"
       with:
         host: ${{ secrets.EC2_HOST }}
         username: ${{ secrets.EC2_USERNAME }}
         key: ${{ secrets.EC2_PRIVATE_KEY }}
         script: |
-            cd
+            # cd
             sudo docker-compose down
             sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/app-with-actions
-            sudo docker-compose up -d
-            sudo docker image prune -a -f
+            sudo docker-compose up -f $COMPOSE_FILE -d
+            sudo docker image prune -f
