--- a/.github/workflows/app-with-compose-actions.yml
+++ b/.github/workflows/app-with-compose-actions.yml
@@ -69,7 +69,7 @@ jobs:
         username: ${{ secrets.EC2_USERNAME }}
         key: ${{ secrets.EC2_PRIVATE_KEY }}
         script: |
-            # cd
+            cd /home/ubuntu
             sudo docker-compose down
             sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/app-with-actions
             sudo docker-compose up -f $COMPOSE_FILE -d
