--- a/.github/workflows/app-with-compose-actions.yml
+++ b/.github/workflows/app-with-compose-actions.yml
@@ -69,8 +69,13 @@ jobs:
         username: ${{ secrets.EC2_USERNAME }}
         key: ${{ secrets.EC2_PRIVATE_KEY }}
         script: |
-            cd /home/ubuntu
+            cd /home/ubuntu  # docker-compose.yml 위치로 이동!
             sudo docker-compose down
             sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/app-with-actions
-            sudo docker-compose up -f $COMPOSE_FILE -d
+            sudo docker-compose up -d
             sudo docker image prune -f
+            # cd /home/ubuntu
+            # sudo docker-compose down
+            # sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/app-with-actions
+            # sudo docker-compose up -f $COMPOSE_FILE -d
+            # sudo docker image prune -f
