--- a/.github/workflows/app-with-compose-actions.yml
+++ b/.github/workflows/app-with-compose-actions.yml
@@ -1,8 +1,8 @@
 name: App With Github Actions with docker-compose CI/CD
 
 on:
-  workflow_dispatch
-  #push
+  #workflow_dispatch
+  push
 
 jobs:
   ci:
