--- a/.github/workflows/app-with-ecs-actions-01.yml
+++ b/.github/workflows/app-with-ecs-actions-01.yml
@@ -4,11 +4,11 @@ on:
     branches:
       - main
 env:
-  AWS_REGION: ap-northeast-2
-  ECR_REPOSITORY: ecr-cicd
-  ECS_SERVICE: ecs-service-fargate 
-  ECS_CLUSTER: ecs-cluster-fargate-jh
-  CONTAINER_NAME: task-definition-fargate:1
+  AWS_REGION: ${{ secrets.AWS_REGION }}
+  ECR_REPOSITORY: ${{ secrets.AWS_ECR_PRIVATE_REPOSITORY }}
+  ECS_SERVICE: ${{ secrets.AWS_ECS_SERVICE }}
+  ECS_CLUSTER: ${{ secrets.AWS_ECS_CLUSTER }}
+  CONTAINER_NAME: ${{ secrets.AWS_ECS_CONTAINER_NAME }}
   
 jobs:
   build-deploy:
@@ -25,8 +25,9 @@ jobs:
           distribution: 'temurin'
           cache: maven
           
-      - name: Create application-prod.properties
+      - name: Create application.properties
         run: |
+          mkdir -p ./src/main/resources
           cd ./src/main/resources
           touch ./application.properties
           echo "${{ secrets.PROPERTIES }}" > ./application.properties
@@ -49,16 +50,16 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-northeast-2
+          aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Login to Amazon ECR
         id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
+        uses: aws-actions/amazon-ecr-login@v2
 
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
         env:
-          ECR_REGISTRY: 291741701425.dkr.ecr.ap-northeast-2.amazonaws.com/ecr-cicd
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: latest
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
@@ -67,21 +68,17 @@ jobs:
 
       - name: ECS task definition JSON file
         id: retrieve-task-def
-        env:
-          ECR_REGISTRY: 291741701425.dkr.ecr.ap-northeast-2.amazonaws.com/ecr-cicd
-          IMAGE_TAG: latest
         run: |
           aws ecs describe-task-definition \
-          --task-definition task-definition-fargate \
+          --task-definition task-definition \
           --query taskDefinition > task-definition.json
-          cat task-definition.json
           echo "task-def-file=task-definition.json" >> $GITHUB_OUTPUT
 
       - name: Fill in the new image ID in the Amazon ECS task definition
         id: task-def
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
-          task-definition: task-definition.json
+          task-definition: ${{ steps.retrieve-task-def.outputs.task-def-file }}
           container-name: ${{ env.CONTAINER_NAME }}
           image: ${{ steps.build-image.outputs.image }}
     
