--- a/.github/workflows/app-with-ecs-actions-01.yml
+++ b/.github/workflows/app-with-ecs-actions-01.yml
@@ -70,7 +70,7 @@ jobs:
         id: retrieve-task-def
         run: |
           aws ecs describe-task-definition \
-          --task-definition task-definition \
+          --task-definition task-definition-fargate \
           --query taskDefinition > task-definition.json
           echo "task-def-file=task-definition.json" >> $GITHUB_OUTPUT
 
